deployment-config/service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-app
  namespace: homeassignment

spec:
  #replicas: 4

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1

      maxSurge: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service

          image: harshart993/user-service:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "150m"
              memory: "350Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
