deployment-config/mysql-headlessservice.yml
apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: homeassignment

spec:
  clusterIP: None

  selector:
    app: mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
