deployment-config/service-clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app-service
  namespace: homeassignment
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 8080
